@@ -466,6 +466,27 @@ namespace os
 		};
 	}
 
+	// enumerator for string1\0string2\0string3\0...stringN\0\0
+	template<class Provider, class ResultType = const wchar_t*>
+	class enum_strings_t: noncopyable, public enumerator<enum_strings_t<Provider, ResultType>, range<ResultType>>
+	{
+	public:
+		enum_strings_t() {}
+		enum_strings_t(Provider Data): m_Provider(Data) {}
+		bool get(size_t index, typename enum_strings_t<Provider, ResultType>::value_type& value)
+		{
+			auto Begin = index? value.data() + value.size() + 1 : m_Provider, End = Begin;
+			while (*End) ++End;
+			value = enum_strings_t<Provider, ResultType>::value_type(Begin, End);
+			return !value.empty();
+		}
+
+	private:
+		const Provider m_Provider;
+	};
+
+	typedef enum_strings_t<const wchar_t*> enum_strings;
+
 	namespace env
 	{
 		namespace detail
@@ -473,8 +494,8 @@ namespace os
 			class provider
 			{
 			public:
-				const wchar_t* get() const { return m_Environment; }
-				wchar_t* get() { return m_Environment; }
+				operator const wchar_t*() const { return m_Environment; }
+				operator wchar_t*() { return m_Environment; }
 
 			protected:
 				wchar_t* m_Environment;
@@ -499,20 +520,6 @@ namespace os
 		}
 
 		std::pair<string, string> split(const wchar_t* Line);
-
-		template<class T>
-		class enum_strings_t: noncopyable, public enumerator<enum_strings_t<T>, const wchar_t*>
-		{
-		public:
-			enum_strings_t() {}
-			bool get(size_t index, typename enum_strings_t<T>::value_type& value)
-			{
-				return *(value = index? value + wcslen(value) + 1 : m_Provider.get()) != L'\0';
-			}
-
-		private:
-			const T m_Provider;
-		};
 
 		typedef enum_strings_t<provider::strings> enum_strings;
 
