@@ -1,4 +1,12 @@
-﻿drkns 23.09.2015 02:45:20 +0200 - build 4425
+﻿drkns 24.09.2015 22:50:09 +0200 - build 4426
+
+1. Не теряем уже введённый текст при прокрутке истории в комстроке.
+
+2. Рефакторинг.
+
+3. Warnings.
+
+drkns 23.09.2015 02:45:20 +0200 - build 4425
 
 1. Рефакторинг.
 
